added a link from admin to home

--- a/app/views/admin/home/index.html.erb
+++ b/app/views/admin/home/index.html.erb
@@ -7,6 +7,9 @@
 <body style="padding:4px;text-align:center;">
 
     <h1> List of businesses ADMIN </h1>
+    
+    <%= link_to "Go back to all menus", root_path %>
+    
     <hr/>
 
     <% for business in @businesses %>
